# PiP-partitioning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: example_boundary.shx  example_buildings.shx
data/H3D/: hess_25832.dbf  hess_25832.qix  hess_25832.shp  hess_25832.shx  hess_boundary_25832.qix  hess_boundary_25832.shp  hess_boundary_25832.shx
data/example/: example_boundary.shp  example_buildings.dbf  example_buildings.qix  example_buildings.shp
scripts/: run_H3D.ps1  run_H3D.sh  run_example.ps1  run_example.sh
src/: main.cpp
src/io/: gis_data.cpp  gis_data.h  read_GIS.cpp  read_GIS.h  write_GIS.cpp  write_GIS.h
src/meshing/: auxiliary.h  dual_mesh.cpp  dual_mesh.h
src/utils/: edge_center.cpp  edge_center.h
